# zetlab

./: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts.timestamp-1729348160229-e3c8159ba4119.mjs
src/: App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: c_analisis.rs  c_caja.rs  c_cat_analisis.rs  c_descuentos.rs  c_especialidad.rs  c_login.rs  c_medicos.rs  c_metodos_pago.rs  c_muestras.rs  c_pacientes.rs  c_procedencias.rs  c_unidades.rs  c_venta.rs  c_ventacomp.rs  mod.rs
src-tauri/src/data/: d_muestras.rs  login.rs  mod.rs
src-tauri/src/db/: connection.rs
src-tauri/src/models/entities/: analisis.rs  cat_analisis.rs  e_muestras.rs  encventa.rs  especialidad.rs  medicos.rs  metodopago.rs  mod.rs  pacientes.rs  sesioncaja.rs  unidades.rs  usuarios.rs
src/components/ui/: Inputs.tsx
src/lib/: apicall.ts
src/lib/crud/: muestra.ts
src/pages/login/: loginview.tsx  protecroute.tsx
src/pages/principal_views/components/: navbar.tsx  sidebar.tsx
src/pages/principal_views/components/documents/: previewresult.tsx  resultadosdoc.tsx  ticket-styles.css  ticket.tsx
src/pages/principal_views/components/modals/analisis/: agregar.tsx  (+2 more)
src/pages/principal_views/views/: analisis.tsx  cajas.tsx  layout.tsx  medicos.tsx  pacientes.tsx  ventacomp.tsx  ventas.tsx  ventaslist.tsx  vestasactuales.tsx
src/pages/secondary_views/components/: opciones.tsx
src/pages/secondary_views/views/: categorias.tsx  especialidades.tsx  menu_ext.tsx  muestras.tsx  unidades.tsx
(+24 files in other folders)
